dataset1235/2025-2/610742602/users/1156133430/executions/677928262_704983377.log
== RUN (2025-08-26 20:25:13)
-- CODE: 
numero = int(input())
print("numero:",numero // numero)
numero = int(input())
print("numero:",numero % numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
numero: 0
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
numero: 0
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
numero: 0
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
numero: 0
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
numero: 0
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
numero: 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:34:09)
-- CODE: 
x = int(input())
y = int(input())
print(x // y)
print(x % y)
print(x * y)
print(y³)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 6
    print(y³)
           ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 6
    print(y³)
           ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 6
    print(y³)
           ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 6
    print(y³)
           ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 6
    print(y³)
           ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 6
    print(y³)
           ^
SyntaxError: invalid character '³' (U+00B3)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:21:17)
-- CODE: 
numero = int(input())
print("numero+numero:",numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
numero+numero: 14
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
numero+numero: 8
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
numero+numero: 10
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
numero+numero: 53
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
numero+numero: 346
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
numero+numero: 347
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:34:39)
-- CODE: 
x = int(input())
y = int(input())
print(x // y)
print(x % y)
print(x * y)
print(y **3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:25:16)
-- CODE: 
numero = int(input())
print("numero:",numero // numero)
numero = int(input())
print("numero:",numero % numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
numero: 0
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
numero: 0
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
numero: 0
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
numero: 0
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
numero: 0
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
numero: 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:35:40)
-- CODE: 
x = int(input())
y = int(input())
print(x // y)
print(x % y)
print(x / y)
print(x * y)
print(y **3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:33:29)
-- CODE: 
x = int(input())
y = int(input())
print(x // y)
print(x % y)
print(x * y)
print(y **3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:22:47)
-- CODE: 
numero = int(input())
print("numero:",numero / numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
numero: 1.0
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
numero: 1.0
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
numero: 1.0
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
numero: 1.0
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
numero: 1.0
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
numero: 1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:33:28)
-- CODE: 
x = int(input())
y = int(input())
print(x // y)
print(x % y)
print(x * y)
print(y **3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:25:02)
-- CODE: 
numero = int(input())
print("numero:",numero // numero)
numero = int(input())
print("numero:",numero%numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
numero: 0
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
numero: 0
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
numero: 0
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
numero: 0
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
numero: 0
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
numero: 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:34:08)
-- CODE: 
x = int(input())
y = int(input())
print(x // y)
print(x % y)
print(x * y)
print(y³)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 6
    print(y³)
           ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 6
    print(y³)
           ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 6
    print(y³)
           ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 6
    print(y³)
           ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 6
    print(y³)
           ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 6
    print(y³)
           ^
SyntaxError: invalid character '³' (U+00B3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:21:25)
-- CODE: 
numero = int(input())
print("numero+numero:",numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
numero+numero: 14
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
numero+numero: 8
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
numero+numero: 10
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
numero+numero: 53
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
numero+numero: 346
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
numero+numero: 347
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:34:38)
-- CODE: 
x = int(input())
y = int(input())
print(x // y)
print(x % y)
print(x * y)
print(y **3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:21:21)
-- CODE: 
numero = int(input())
print("numero+numero:",numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
numero+numero: 14
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
numero+numero: 8
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
numero+numero: 10
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
numero+numero: 53
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
numero+numero: 346
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
numero+numero: 347
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:31:58)
-- CODE: 
x = int(input())
y = int(input())
print(x // y)
print(x % y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
0
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
3
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
0
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
1
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
0
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:25:02)
-- CODE: 
numero = int(input())
print("numero:",numero // numero)
numero = int(input())
print("numero:",numero%numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
numero: 0
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
numero: 0
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
numero: 0
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
numero: 0
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
numero: 0
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
numero: 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:24:51)
-- CODE: 
numero = int(input())
print("numero:",numero // numero)
numero = int(input())
print("numero:",numero%numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
numero: 0
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
numero: 0
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
numero: 0
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
numero: 0
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
numero: 0
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
numero: 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:22:25)
-- CODE: 
numero = int(input())
print("numero / numero:",numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
numero / numero: 14
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
numero / numero: 8
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
numero / numero: 10
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
numero / numero: 53
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
numero / numero: 346
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
numero / numero: 347
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:25:14)
-- CODE: 
numero = int(input())
print("numero:",numero // numero)
numero = int(input())
print("numero:",numero % numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
numero: 0
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
numero: 0
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
numero: 0
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
numero: 0
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
numero: 0
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
numero: 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:35:39)
-- CODE: 
x = int(input())
y = int(input())
print(x // y)
print(x % y)
print(x / y)
print(x * y)
print(y **3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
